--- a/CLASS/configs/stack_three_dp_abs.yaml
+++ b/CLASS/configs/stack_three_dp_abs.yaml
@@ -3,7 +3,7 @@ env_name: mimicgen_stack_three
 device: cuda
 num_envs: 25
 max_episode_steps: 800
-dataset_dir: /scratch/dcs3zc/class/mimicgen # Modify this to your dataset directory
+dataset_dir: /path/to/dataset # Modify this to your dataset directory
 ori_dataset_path: ${dataset_dir}/stack_three_d0.hdf5
 base_dir: ${dataset_dir}/${env_name}_${action_space}_${dist_metric}_${dist_horizon} # Directory to save the precomputed distances, policies, etc.
 save_model: true
