--- a/CLASS/configs/square_ph_dp_abs.yaml
+++ b/CLASS/configs/square_ph_dp_abs.yaml
@@ -3,7 +3,7 @@ env_name: robomimic_square
 device: cuda
 num_envs: 25
 max_episode_steps: 600
-dataset_dir: /path/to/dataset # Modify this to your dataset directory
+dataset_dir: /scratch/dcs3zc/class/robomimic # Modify this to your dataset directory
 ori_dataset_path: ${dataset_dir}/low_dim_v141.hdf5
 base_dir: ${dataset_dir}/${env_name}_${action_space}_${dist_metric}_${dist_horizon} # Directory to save the precomputed distances, policies, etc.
 save_model: true
@@ -13,9 +13,9 @@ dynamic_mode: true # Set to true if you want dynamic camera placements/movements
 dist_metric: dtw
 dist_horizon: 16
 dtw_file_path: ${base_dir}/dists.pth
-dist_quantile: 0.025
+dist_quantile: 0.05
 use_sparse: false # Set to true if your dataset is large
-temperature: 0.05
+temperature: 0.07
 
 # ========== OBS / ACTION STRUCTURE ==========
 obs_keys: [robot0_eef_pos, robot0_eef_quat, robot0_joint_pos, robot0_gripper_qpos, agentview_image]
@@ -24,7 +24,7 @@ latent_dim: 0
 obs_horizon: 1
 pred_horizon: 16
 action_horizon: 8
-action_space: abs_ee_pose
+action_space: rel_ee_pose
 action_dim: ${if:"'joint_pos' in '${action_space}'", 8, 10}
 
 # ========== DATASET ==========
@@ -36,6 +36,7 @@ dataset:
   action_space: ${action_space}
   obs_horizon: ${obs_horizon}
   pred_horizon: ${pred_horizon}
+  normalize_action_per_timestep: true
   device: cpu
 
 # ========== POLICY ==========
